<resources>
    <string name="app_name">ToDoListApp</string>
    <string name="your_tasks">Your Tasks</string>
    <string name="prioirty">Prioirty</string>
    <string name="enter_task">Enter Task</string>
    <string name="enter_details">Enter Details</string>
    <string name="delete_all">Delete All</string>
    <string name="addition">+</string>
    <string name="manage_your_day">Manage Your Day</string>
    <string name="to_do">To Do</string>
    <string name="your_task_will_go_here">Your Task Will Go Here</string>
    <string name="priority_high">Priority- High</string>
</resources>