<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/_20sdp"
    tools:context=".CreateCard">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_details"
        android:textColor="@color/white"
        android:textSize="@dimen/_36ssp"
        android:gravity="center"
        android:fontFamily="sans-serif"/>

    <EditText
        android:id="@+id/createTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_task"
        android:layout_marginTop="@dimen/_30sdp"
        android:padding="@dimen/_15sdp"
        android:textColorHint="#BFBBBB"
        android:background="@drawable/custom_edit_text"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/createPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/prioirty"
        android:padding="@dimen/_15sdp"
        android:background="@drawable/custom_edit_text"
        android:textColorHint="#BFBBBB"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Save"
        android:background="#03A9F4"
        android:textStyle="bold" />

</LinearLayout>