<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/your_tasks"
            android:textColor="@color/white"
            android:textSize="@dimen/_40ssp"
           />

        <Button
            android:id="@+id/deleteAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:backgroundTint="#F44336"
            android:text="@string/delete_all"
            android:textAllCaps="false"
            android:textColor="@color/black" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/view" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add"
            android:layout_width="@dimen/_57sdp"
            android:layout_height="@dimen/_57sdp"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:background="@drawable/circular_button"
            android:text="@string/addition"
            android:textSize="@dimen/_25ssp"
            android:textColor="@color/white"/>
    </FrameLayout>

  </LinearLayout>